--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: dugun-drive-api
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: chmod +x render-build.sh && ./render-build.sh
     startCommand: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
